# imanage

./: .gitignore  CLAUDE.md  FUTURE.md  README.md  TEST.md  TODO.md  main.py  makefile  pyproject.toml  requirements.txt  setup.py
app/: .gitignore  README.md  project.yml
app/Imanage/: ImanageApp.swift
app/Imanage.xcodeproj/: project.pbxproj
app/Imanage/Core/: BTimeUtils.swift  ExifReader.swift  FeatureFlags.swift  FileOrganizer.swift  HierarchyField.swift  ImanageConfig.swift  Journal.swift  PathCalculator.swift  SecurityScope.swift
app/Imanage/MenuBar/: MenuBarController.swift
app/Imanage/Models/: Plan.swift
app/Imanage/Resources/: Info.plist  Localizable.xcstrings  PrivacyInfo.xcprivacy
app/Imanage/Stores/: FolderWatcher.swift  OrganizeStore.swift  SettingsStore.swift  WatcherStore.swift
app/Imanage/Views/: AboutView.swift  ActionBarView.swift  BeforeAfterView.swift  ContentView.swift  DestinationBarView.swift  DropZoneView.swift  FolderTree.swift  HierarchyBarView.swift  SettingsView.swift
docs/appstore/: README.md
fastlane/: .gitignore  Appfile  Deliverfile
fastlane/metadata/: copyright.txt
fastlane/metadata/en-US/: description.txt  keywords.txt  marketing_url.txt  name.txt  (+5 more)
scripts/: build.sh  do-release-mas.sh
site/: index.md  package-lock.json  package.json  privacy.md  wrangler.jsonc
site/.vitepress/: config.mts  constants.ts
site/en/: index.md  privacy.md
site/public/: _headers  robots.txt
src/imanage/: __init__.py  __main__.py  btime_utils.py  config.toml  core.py  i18n.py  journal.py  log.py  progress.py  xmp_handler.py
(+17 files in other folders)
