[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "imanage"
dynamic = ["version"]
description = "A tool to organize JPG and RAW files."
dependencies = [
    "tomli",
    "pillow",
    "python-xmp-toolkit",
    "pyinstaller",
    "setuptools-scm>=8"
]
requires-python = ">=3.10"

[project.scripts]
imanage = "imanage.core:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/imanage/_version.py"
